fix bug with detailed guidance overlapping crumb trail

--- a/app/assets/stylesheets/frontend/base.scss
+++ b/app/assets/stylesheets/frontend/base.scss
@@ -114,15 +114,15 @@
 
 
 // grey stripe along top of page
-.header-context {
-  border-bottom: 50px solid #f4f4f4;
-  margin-bottom: -50px;
-  
-  @include media(tablet){
-    border-bottom: 60px solid #f8f8f8;
-    margin-bottom: -60px;
-  }
-}
+//.header-context {
+//  border-bottom: 50px solid #f4f4f4;
+//  margin-bottom: -50px;
+//  
+//  @include media(tablet){
+//    border-bottom: 60px solid #f8f8f8;
+//    margin-bottom: -60px;
+//  }
+//}
 
 
 // DEBUG
